monitoring/networkpolicy/03-allow-pay-from-api.yaml
# Allow Pay Pod to receive traffic from API Pod
# API (4000) -> Pay Pod (3100)
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-pay-from-api
  namespace: flash-ticket
  labels:
    app: network-security
    service: pay
    version: "1.0"
spec:
  podSelector:
    matchLabels:
      app: flash-pay
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: flash-api
    ports:
    - protocol: TCP
      port: 3100
